adding file and pictures

--- a/Assignment1/Habbies.html
+++ b/Assignment1/Habbies.html
@@ -6,10 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <h2>THE CULTURE OF GUINEA BISSAU!</h2>
+    <p>The Habbies of Guinea-Bissau Population Every year</p>
+    <a href="assignment1.html">Back to homepage</a>
 
+
+    <ul>
+        <li>
+            Many of the celebrations and Guinea holidays are centered on Islamic rites, as well as ethnic traditions. 
+            Festivals are often held in Conakry, the capital. In addition to celebrations that coincide with the Muslim calendar, 
+            there are cultural events which are great opportunities to celebrate diversity in the country
+        </li>
+    </ul>
 </body>
+
+<div>
+    <img src="images-4.jpg" width="30%" height="30%">
+</div>
+
 
 </html>
