--- a/Assignment1/Resume.html
+++ b/Assignment1/Resume.html
@@ -46,16 +46,18 @@
 </head>
 
 <body>
+    <h1> ABOUT NICKSON DOS SANTOS!</h1>
+    <a href="assignment1.html">Back to homepage</a>
 
     <!-- your image - change src-->
-
+ 
     <img src="nickson8.jpg" width="170" height="100" />
 
     <!-- Your name and address-->
 
     <div class="contact_info">
 
-        <h1>"Nickson DosSantos"</h1>"address: Pleasant St Fall River MA, P.O. Box 5305"<br />"Phone: 339-707-5250"<br />"Email:ComputerScience2018@hotmail.com.com"</p>
+        <h2>"Nickson DosSantos"</h2>"address: Pleasant St Fall River MA, P.O. Box 5305"<br />"Phone: 339-707-5250"<br />"Email:ComputerScience2018@hotmail.com.com"</p>
 
     </div>
 
