--- a/Assignment1/assignment1.html
+++ b/Assignment1/assignment1.html
@@ -18,21 +18,21 @@
     <div class="conteiner ">
         <divc class="nav-Bissau">
 
-    </div class="left-side">
+    </div class="right-side">
     <div class="nav-link-Bissau">
         <a href="assignment1.html">Home</a>
 
-    </div class="nav-Bissau">
+    </div class="nav-link-Bissau">
     <a href="about.html">About</a>
     <div>
-    </div class="nav-Bissau">
+    </div class="nav-link-Bissau">
     <a href="Habbies.html">Habbies</a>
     <div>
-    </div class="nav-Bissau">
-    <a href="Resume.html">Resume</a>
+    </div class="nav-link-Bissau">
+    <a href="Resume.html">"Resume"</a>
     <div>
-    </div class="nav-Bissau">
-    <a href="Work.html">Work</a>
+    </div class="nav-link-Bissau">
+    <a href="Work.html">"Work"</a>
     <div>
 
 
@@ -55,7 +55,7 @@
         <div class="anotherClass ">
             BROTHERS AND SYSTERS
         </div>
-        <img src="Guine-Bissau.jpg" width="200" height="100">
+        <img src="guinea-bissau-borders.jpg" width="100%" height="100%">
 </body>
 
 
