--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -49,7 +49,7 @@
 
     <!-- your image - change src-->
 
-    <img src="nickson8.jpg" width="170" height="100" />
+    <img src="nickson8.jpg" width="100%" height="100%" />
 
     <!-- Your name and address-->
 
@@ -61,22 +61,25 @@
 
     <!-- introduction-->
 
-    <p>"Nickson is very passionate about electronics & Networking."</p>
-    <p>"He has been working as electronics technician since 2006"</p>
-    <p>"He has been working as Cable & Network technician since 2012"</p>
+    <p>Nickson is very passionate about electronics & Networking.
+         He has been working as electronics technician since 2006,
+         He has been working as Cable & Network technician since 2012</p>
     <!-- experience details-->
 
     <div id="work_exp" class="content">
 
         <h2>Work Experience</h2>
+        <p>He is currently working as Cable & Network technician for RCN from Friday to Sunday https://my.rcn.com/login, and for COMCAST from Monday to Thurdays</p>
+        <p>He was team leader in electronics technician in Unetixs Vascular, North Kingstown R.I from 2016 to 2019 </p>
+        <p>He was working as elecronics technician in American Dryer Inc, Fall river from 2006 to 2011</p>
 
         <!-- unordered list-->
 
         <ul>
 
-            <li> "More than 7years experience as Cable Networking technician" </li>
-            <li>"More than 12 years experince of wiring, car alarme system, electronics painel instalations"</li>
-            <li> "More than 12 years experience as electronics technician, house electrician & alarm system"</li>
+            <li>More than 7years experience as Cable Networking technician</li>
+            <li>More than 12 years experince in wiring, car alarme system, electronics painel instalations</li>
+            <li>More than 12 years experience as electronics technician & house electrician</li>
 
         </ul>
 
@@ -91,10 +94,9 @@
         <ul>
 
             <li>Mastering in Computer Science</li>
-
-            <li>Bachelors Degree in Computer Science, Mathematics & Physics Minor</li>
-            <li>Associate Degree in Electronics Engineering, electronics Technology, & General study</li>
-            <li>"Certified electronics & electrician "</li>
+            <li>Bachelors Degree in Computer Science, Mathematics & Physics Minor, from 2016 to 2021</li>
+            <li>Associate Degree in Electronics Engineering, electronics Technology, & General study from 2010 to 2013</li>
+            <li>Certified in electronics & electrical from 2006 to 2009</li>
     </div>
 
     <!-- technology known details-->
@@ -108,14 +110,11 @@
             <li>Programming Languages</li>
 
             <ul>
-
-                <li>" I do 70% to 87% python coding "</li>
-                <li>" I do 60% to 81% Java coding "</li>
-                <li>" I do 55% to 80% C,C#, C++</li>
-
-                <li>learning html</li>
-
-                <li>learning css</li>
+                <li>He does 70% to 87% python coding</li>
+                <li>He does 60% to 81% Java coding</li>
+                <li>He does 55% to 80% C,C#, & C++</li>
+                <li>He's ccurrently learning html</li>
+                <li>He's currently learning css</li>
 
 
 
