--- a/Assignment1/Work.html
+++ b/Assignment1/Work.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <h3> WELCOME!</h3>
+    <p>Our country is a create please to learning a lot about Africa culture</p>
+    <a href="assignment1.html">Back to homepage</a>
 
 </body>
 
